k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santospedia-manutencao
  namespace: santospedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: santospedia-manutencao
  template:
    metadata:
      labels:
        app: santospedia-manutencao
    spec:
      containers:
        - name: santospedia-manutencao
          image: sonijok/santospedia-manutencao:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
