k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: santospedia-manutencao
  namespace: santospedia
spec:
  selector:
    app: santospedia-manutencao
  ports:
    - port: 80
      targetPort: 80
