k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: santospedia-manutencao-ingress
  namespace: santospedia
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: santospedia.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: santospedia-manutencao-svc
                port:
                  number: 80
    - host: www.santospedia.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: santospedia-manutencao-svc
                port:
                  number: 80
